# patterns

./: CMakeLists.txt  README.md  composite.cpp  composite.cppp  observer.cpp
include/: composite.hpp  errors.hpp  observer.hpp  visitor.hpp
src/: composite.hpp  errors.cpp  errors.hpp  observer.cpp  observer.hpp
test/: CMakeLists.txt  decorator.cpp  decorator.out  visitor_composite.cpp
test/src/: main.cpp  test_all.hpp  test_composite.hpp  test_observer.hpp
